modules/wycs/tests/valid/test_103.wycs
define Map({(int,int)} pairs) as forall [ int i1, int i2, int v1, int v2 :
    (i1, v1) ∈ pairs &&
    (i2, v2) ∈ pairs
    ==>
      i1 != i2 ||
      v1 == v2
  ]

define Bijection({int,int} pairs) as
       forall [ int i1, int i2, int v1, int v2 :
    (i1, v1) ∈ pairs &&
    (i2, v2) ∈ pairs && (i1,v1) != (i2,v2)
    ==>
      (i1 != i2 && v1 != v2)
  ]

assert forall [ {int,int} pairs : 
       Bijection(pairs) ==> Map(pairs)
]


